# LMDR-_-WEBSITE-V2

./: .eslintrc.json  .firebaserc  .gitignore  .mcp.json  .npmrc  .wixignore  AGENTS.md  API_GATEWAY_SECURITY_REPORT.md  API_SECURITY_AUDIT_REPORT.md  API_SECURITY_CHECK.md  API_SECURITY_CHECKLIST.md  API_SECURITY_CHECK_REPORT.md  API_SECURITY_INTEGRITY_REPORT.md  API_SECURITY_INTEGRITY_REPORT_FINAL.md  API_SECURITY_REPORT.md  API_SECURITY_REPORT_2024.md  API_SECURITY_REPORT_V2.md  AUDIT_LOG.txt  CLAUDE.md  DEPENDENCY_AUDIT.md  DEPENDENCY_AUDIT_REPORT.md  DEPENDENCY_SECURITY_REPORT.md  DEPENDENCY_SECURITY_REPORT_FINAL.md  DEPENDENCY_SECURITY_REPORT_V2.md  DEPENDENCY_SECURITY_REPORT_V3.md  DEPENDENCY_SECURITY_REPORT_V4.md  DEPENDENCY_VULNERABILITY_CHECK_FINAL.md  DEPENDENCY_VULNERABILITY_REPORT.md  DRIVER JOURNEY MAP Discovery → Firs.md  GEMINI.md  PARITY_REPORT.md  SECRETS_AUDIT_REPORT.md  SECRETS_AUDIT_REPORT_2026.md  SECRETS_AUDIT_REPORT_FINAL.md  SECRETS_EXPOSURE_REPORT.md  SECRETS_SCAN_LOG.txt  SECRETS_SCAN_REPORT_FINAL.md  SECURITY_ASSESSMENT_STRIPE.md  SECURITY_AUDIT_API_GATEWAY.md  SECURITY_AUDIT_API_GATEWAY_REPORT.md  (+66 more)
.claude/: hooks.json  jest-results.json  mcp-config-template.json  settings.json  settings.local.json  tmp-jest-output.txt
Compendium/: README.md
Conductor/: agentic-capability-matrix.md  agentic-recruitment-and-retention-blueprint.md  logging-monitoring-airtable-mapping.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  (+1 more)
sdk/python/lmdr_python/: README.md  pyproject.toml
sdk/python/lmdr_python/lmdr_python/: __init__.py  client.py
(+2253 files in other folders)
