[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmdr-python"
version = "0.1.0"
description = "LMDR External API Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["lmdr_python*"]
